[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/01_start/SceneStart.gd" type="Script" id=1]

[node name="StartScene" type="Node2D"]
script = ExtResource( 1 )

[node name="BLACK" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -72, -64, -72, 768, 1344, 768, 1352, -56 )
__meta__ = {
"_edit_lock_": true
}

[node name="SettingsButton" type="Button" parent="."]
visible = false
margin_left = 1056.0
margin_top = 32.0
margin_right = 1256.0
margin_bottom = 52.0
text = "Settings"

[node name="StartButton" type="Button" parent="."]
margin_left = 151.0
margin_top = 146.0
margin_right = 398.0
margin_bottom = 224.0
text = "Start"

[node name="CreditsButton" type="Button" parent="."]
margin_left = 871.0
margin_top = 143.0
margin_right = 1135.0
margin_bottom = 225.0
text = "Credits"

[connection signal="hidden" from="." to="." method="_on_StartScene_hidden"]
[connection signal="shown" from="." to="." method="_on_StartScene_shown"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
